--- a/nav.css
+++ b/nav.css
@@ -21,6 +21,7 @@ nav {
           user-select: none;
   transform: translate3d(25px, -25px, 0);
   transition: transform 0.5s cubic-bezier(0.3, 1.4, 0.5, 0.9);
+  z-index:99;
 }
 nav.open {
   transform: translate3d(0, 0, 0);
