--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     margin: 0;
     padding: 0;
 }
-html{
+body{
     background-color: #0A0A09;
     background-image: url(./images/grainedSvg.svg);
 }
